# naclac-fw

./: Cargo.toml  LICENSE  install.ps1  install.sh
.github/scripts/: install-nacvm.ps1  install-nacvm.sh  install.ps1  install.sh
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: account.rs  add.rs  airdrop.rs  build.rs  clean.rs  deploy.rs  doctor.rs  expand.rs  generate.rs  idl.rs  logs.rs  mod.rs  profile.rs  test.rs  upgrade.rs  verify.rs
cli/src/commands/init/: mod.rs  templates.rs  utils.rs
naclac-client-gen/: Cargo.toml
naclac-client-gen/src/: lib.rs
naclac-cpi-core/: Cargo.toml  README.md
naclac-cpi-core/src/: automatic.rs  codegen.rs  lib.rs  universal.rs
naclac-idl/: Cargo.toml
naclac-idl/src/: lib.rs
naclac-interface/: Cargo.toml  README.md
naclac-interface/src/: lib.rs
naclac-lang/: Cargo.toml  README.md
naclac-lang/.cargo/: config.toml
naclac-lang/src/: associated_token.rs  context.rs  cpi.rs  error.rs  lib.rs  prelude.rs  system_program.rs  token.rs
naclac-lang/src/event/: borsh.rs  mod.rs  pinocchio.rs  zero_copy.rs
naclac-lang/src/wrappers/: account.rs  account_loader.rs  interface.rs  keyed_ref.rs  mod.rs  program.rs  signer.rs  span.rs
naclac-macros/: Cargo.toml  README.md
naclac-macros/src/: accounts.rs  component.rs  error_code.rs  event.rs  interface.rs  lib.rs  program.rs  system.rs
naclac-macros/src/instruction/: close_account.rs  init_cpi.rs  mod.rs  parser.rs  realloc.rs  security.rs
naclac-syn/: Cargo.toml
naclac-syn/src/: instruction.rs  lib.rs  parser.rs  pda.rs  types.rs
nacvm/: Cargo.toml
nacvm/src/commands/: install.rs  use_ver.rs
nacvm/src/utils/: path_setup.rs  resolve.rs
