[workspace]
members = [
    "cli",
    "naclac-client-gen", 
    "naclac-idl", 
    "naclac-lang",
    "naclac-syn", 
    "naclac-macros", 
    "naclac-interface",
    "naclac-cpi-core",
    "nacvm"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache 2.0"
repository = "https://github.com/naclacframework/naclac-fw"

[workspace.dependencies]
# Internal Workspace Crates
naclac-syn = { version = "0.1.0", path = "naclac-syn" }
naclac-idl = { version = "0.1.0", path = "naclac-idl" }
naclac-client-gen = { version = "0.1.0", path = "naclac-client-gen" }
naclac-macros = { version = "0.1.0", path = "naclac-macros" }
naclac-lang = { version = "0.1.0", path = "naclac-lang" }
naclac-interface = { version = "0.1.0", path = "naclac-interface" }
naclac-cpi-core = { version = "0.1.0", path = "naclac-cpi-core" }

# Proc Macros & AST
syn = { version = "2.0.117", features = ["full", "extra-traits", "parsing"] }
quote = "1.0.45"
proc-macro2 = "1.0.106"
heck = "0.5.0"

# CLI & Utilities
clap = { version = "4.6.0", features = ["derive"] }
indicatif = "0.18.4"
ctrlc = "3.5.2"
dirs = "6.0.0"
colored = "3.1.1"

# Codecs & Crypto
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
borsh = { version = "1.6.1", default-features = false, features = ["derive"] }
bs58 = "0.5.1"
flate2 = "1.1.9"
hex = "0.4.3"
toml = "1.1.1"
bytemuck = { version = "1.25.0", features = ["derive"] }
sha2 = "0.11.0"
blake3 = ">=1.0, <1.8"

# Solana Web3
solana-program = "^2"
solana-rpc-client = "^3"
solana-rpc-client-api = "^3"
solana-transaction-status = "^3"
solana-keypair = "^3"
solana-transaction = "^3"
solana-pubkey = "^2"
solana-instruction = "3"
solana-signature = "3"
solana-address = { version = "2", features = ["curve25519"] }
solana-system-interface = { version = "^1", features = ["bincode"] }
solana-signer = "^3"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "6.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "8.0.0", features = ["no-entrypoint"] }

#pinocchio
pinocchio = { version = "=0.10.2", features = [ "cpi", "alloc", "copy" ] }
pinocchio-system = { version = "=0.5.0" }
pinocchio-token = { version = "=0.5.0" }
pinocchio-token-2022 = { version = "=0.2.0" }
pinocchio-log = { version = "^0" }
pinocchio-pubkey = { version = "=0.3.0" }
pinocchio-log-macro = { version = "^0" }
pinocchio-associated-token-account = { version = "=0.3.0" }
pinocchio-memo = { version = "=0.3.0" }

