[package]
name = "naclac-client-gen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TypeScript client and SDK generator for Naclac programs."

[dependencies]
naclac-idl = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
heck = { workspace = true }
