[package]
name = "naclac-cpi-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core utilities and macros for simplified Cross-Program Invocations (CPI)."

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits", "parsing"] }
sha2 = { workspace = true }
heck = { workspace = true }
