[package]
name = "naclac-syn"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Syntax parsing and AST utilities for the Naclac framework."

[dependencies]
heck = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }
